--- a/_dev/scss/cp-admin.scss
+++ b/_dev/scss/cp-admin.scss
@@ -109,7 +109,7 @@
 		color: #777;
 	}
 
-	label {
+	label, .label {
 		width: 20%;
 		display: inline-block;
 		vertical-align: top;
@@ -186,6 +186,7 @@ th#menu_order {
 	border: 1px solid #ccc;
 	padding: 10px;
 	margin: 10px 0;
+	background: #fff;
 
 	&.new {
 		visibility: hidden;
