[new] prefix for languages in urls

--- a/templates/_header.html
+++ b/templates/_header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{bloginfo show=language}" dir="{bloginfo show=text_direction}">
+<html lang="{$page.language}" dir="{bloginfo show=text_direction}">
 <head>
 	<title>{$page.title}</title>
 	<meta charset="{bloginfo show=charset}">
