--- a/templates/_header.html
+++ b/templates/_header.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="{$page.language}" dir="{bloginfo show=text_direction}">
+<html lang="{$page.language}" dir="{bloginfo show=text_direction}" prefix="og: http://ogp.me/ns#">
 <head>
-	<title>{$page.title}</title>
 	<meta charset="{bloginfo show=charset}">
-	<meta name="viewport" content="width=device-width">
-	<meta name="description" content="{$page.content|strip_tags|truncate:200}">
-	<meta property="og:locale" content="{$page.language}">
+	<title>{$page.title}</title>
+	<meta name="description" content="{$page.description}">
+	<meta property="og:locale" content="{$page.locale}">
 	<meta property="og:title" content="{$page.title}">
-	<meta property="og:description" content="{$page.content|strip_tags|truncate:200}">
+	<meta property="og:description" content="{$page.description}">
 	<meta property="og:url" content="{get_permalink}">
 	<meta property="og:site_name" content="{bloginfo show=name}">
 	<meta property="og:type" content="website">
 	{if $page.image}<meta property="og:image" content="{$page.image}">
 {/if}
-{$header}
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="profile" href="http://gmpg.org/xfn/11">
+	{$header}
 </head>
 <body id="{$page.slug}">
