--- a/templates/mb/row.html
+++ b/templates/mb/row.html
@@ -1,4 +1,4 @@
 <div class="cp_meta_box field_{$field.type}">
-	<label for="{$field.id}">{$field.name}</label>
+	<label for="{$field.field_id}">{$field.name}</label>
 	{$field.field}
 </div>
