--- a/_dev/scss/cp-admin.scss
+++ b/_dev/scss/cp-admin.scss
@@ -131,7 +131,7 @@
 		min-width: 484px;
 	}
 	
-	&.field_checkbox, &.field_radio {
+	&.field_checkbox, &.field_radio, &.field_user_role, &.field_user, &.field_taxonomy {
 		
 		span.clm {
 			width: 20%;
