--- a/templates/fields/checkbox.html
+++ b/templates/fields/checkbox.html
@@ -1,9 +1,9 @@
 {if count($field.options)}
 <ul>
-	{foreach from=$field.options item=option}
+	{foreach from=$field.options item=option key=k}
 	<li>
-		<input type="checkbox" name="{$field.field_name}[]" id="{$field.field_id}_{$option.id}" value="{$option.id}"{if in_array($option.id, $field.value)} checked="checked"{/if}>
-		<label for="{$field.field_id}_{$option.id}">{$option.name}</label>
+		<input type="checkbox" name="{$field.field_name}[]" id="{$field.field_id}_{$k}" value="{$k}"{if in_array($k, $field.value)} checked="checked"{/if}>
+		<label for="{$field.field_id}_{$k}">{$option}</label>
 	</li>
 	{/foreach}
 </ul>
