--- a/templates/fields/radio.html
+++ b/templates/fields/radio.html
@@ -1,8 +1,8 @@
 <ul>
-	{foreach from=$field.options item=option}
+	{foreach from=$field.options item=option key=k}
 	<li>
-		<input type="radio" name="{$field.field_name}" id="{$field.field_id}_{$option.id}" value="{$option.id}"{if $option.id == $field.value} checked="checked"{/if}>
-		<label for="{$field.field_id}_{$option.id}">{$option.name}</label>
+		<input type="radio" name="{$field.field_name}" id="{$field.field_id}_{$k}" value="{$k}"{if $k == $field.value} checked="checked"{/if}>
+		<label for="{$field.field_id}_{$k}">{$option}</label>
 	</li>
 	{/foreach}
 </ul>
