--- a/templates/fields/select.html
+++ b/templates/fields/select.html
@@ -1,7 +1,7 @@
-{if $field.type == multiselect}
+{if isset($field.multiple) && $field.multiple}
 <select name="{$field.field_name}[]" id="{$field.field_id}" multiple="multiple" size="{count($field.options)}">
-	{foreach from=$field.options item=option}
-	<option value="{$option.id}"{if in_array($option.id, $field.value)} selected="selected"{/if}>{$option.name}</option>
+	{foreach from=$field.options item=option key=k}
+	<option value="{$k}"{if in_array($k, $field.value)} selected="selected"{/if}>{$option}</option>
 	{/foreach}
 </select>
 {else}
