[fix] redirect bug, upload issues

--- a/_dev/scss/cp-admin.scss
+++ b/_dev/scss/cp-admin.scss
@@ -152,6 +152,9 @@
 	border: 1px solid #ccc;
 	padding: 10px;
 	border-radius: 3px;
+	display: inline-block;
+	width: 70%;
+	margin: 0;
 	
 	div {
 		border: 1px solid #ddd;
