--- a/_dev/scss/cp-admin.scss
+++ b/_dev/scss/cp-admin.scss
@@ -131,7 +131,7 @@
 		min-width: 484px;
 	}
 	
-	&.field_checkbox, &.field_radio, &.field_user_role, &.field_user, &.field_taxonomy {
+	&.field_checkbox, &.field_radio, &.field_user_role, &.field_user, &.field_taxonomy, &.field_post_link {
 		
 		span.clm {
 			width: 20%;
@@ -141,8 +141,12 @@
 		
 		ul {
 			display: inline-block;
-			width: 70%;
-			margin: 0;
+			width: 65%;
+			margin: 0 0 0 5%;
+
+			label {
+				width: auto;
+			}
 		}
 	}
 	
