--- a/templates/_header.html
+++ b/templates/_header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{$page.language}" dir="{bloginfo show=text_direction}" prefix="og: http://ogp.me/ns#">
+<html lang="{$page.language}" dir="{if {is_rtl}}rtl{else}ltr{/if}" prefix="og: http://ogp.me/ns#">
 <head>
 	<meta charset="{bloginfo show=charset}">
 	<title>{$page.title}</title>
