--- a/templates/fields/input.html
+++ b/templates/fields/input.html
@@ -1,1 +1,1 @@
-<input type="{$field.type}" name="{$field.field_name}" value="{$field.value}" id="{$field.field_id}"{foreach from=$field.attributes key=k item=attr} {$k}="{$attr}"{/foreach}>
+{if $field.prefix}<span>{$field.prefix}</span> {/if}<input type="{$field.type}" name="{$field.field_name}" value="{$field.value}" id="{$field.field_id}"{foreach from=$field.attributes key=k item=attr} {$k}="{$attr}"{/foreach}>{if $field.suffix} <span>{$field.suffix}</span>{/if}
