--- a/templates/fields/upload.html
+++ b/templates/fields/upload.html
@@ -11,7 +11,7 @@
 					<label for="{$field.field_name}_caption_{$k}">caption</label>
 					<input type="text" name="{$field.field_name}[caption][]" id="{$field.field_name}_caption_{$k}" value="{the_excerpt id={$file.attachment}}">
 					<label for="{$field.field_name}_alt_{$k}">alt text</label>
-					<input type="text" name="{$field.field_name}[alt][]" id="{$field.field_name}_alt_{$k}" value="{post_meta key=alt id={$file.attachment}}">
+					<input type="text" name="{$field.field_name}[alt][]" id="{$field.field_name}_alt_{$k}" value="{post_meta key=_wp_attachment_image_alt id={$file.attachment}}">
 				</td>
 			</tr>
 		</table>
