--- a/templates/_header.html
+++ b/templates/_header.html
@@ -10,7 +10,7 @@
 	<meta property="og:url" content="{get_permalink}">
 	<meta property="og:site_name" content="{bloginfo show=name}">
 	<meta property="og:type" content="website">
-	{if $page.image}<meta property="og:image" content="{$page.image}">
+	{if $page.image}<meta property="og:image" content="{image id={$page.image} w=1200 h=627 q=95 zc=1 link=1}>
 {/if}
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="http://gmpg.org/xfn/11">
