select box changes

--- a/_dev/scss/cp-admin.scss
+++ b/_dev/scss/cp-admin.scss
@@ -134,7 +134,7 @@
 		min-width: 484px;
 	}
 	
-	&.field_checkbox, &.field_radio, &.field_user_role, &.field_user, &.field_taxonomy, &.field_post_link {
+	&.field_checkbox, &.field_radio, &.field_user_role, &.field_user, &.field_taxonomy, &.field_post_link, &.field_post_link_combined {
 		
 		span.clm {
 			width: 20%;
